unpackaged/main/default/objects/Account/fields/A4_Data_Only__c.field-meta.xml
<CustomField>
    <fullName>A4_Data_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used on Provider record type for available page layouts.</description>
    <label>A4 Data Only</label>
    <type>Checkbox</type>
</CustomField>