unpackaged/main/default/objects/Account/fields/A4_Printer__c.field-meta.xml
<CustomField>
    <fullName>A4_Printer__c</fullName>
    <description>Used by Spanish and Italian teams on Shop layout.</description>
    <label>A4 Printer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>