unpackaged/main/default/objects/Account/fields/Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_Description__c</fullName>
    <description>Used to provide a brief description of the account.</description>
    <label>Account Description</label>
    <type>TextArea</type>
</CustomField>