unpackaged/main/default/objects/Account/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <description>Unique ID used for Tax Free merchants.</description>
    <externalId>true</externalId>
    <inlineHelpText>HO: 
2-letter country code + TRS or AX number for HO 
_____________________________
Store: 
2-letter country code + S + TRS or AX number for Shops + S for Single Sale + P for PTF</inlineHelpText>
    <label>Account ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>