unpackaged/main/default/objects/Account/fields/Account_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_ID__c</fullName>
    <description>System field used to ensure uniqueness of shops for reporting.</description>
    <formula>Name &amp; &quot; - &quot; &amp;  Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name &amp; ID</label>
    <type>Text</type>
</CustomField>