unpackaged/main/default/objects/Account/fields/Account_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_s_Manager__c</fullName>
    <description>Formula field for Owner&#39;s manager.  Used in workflow rule.</description>
    <formula>Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner&#39;s Manager</label>
    <type>Text</type>
</CustomField>