unpackaged/main/default/objects/Account/fields/Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number__c</fullName>
    <description>This field can be used for Standard Phone Number field displays normal number formal not splitted to strings.</description>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(Phone, &#39;.&#39;, &#39;&#39;) , &#39; &#39;, &#39;&#39;) , &#39;-&#39;, &#39;&#39;) , &#39;)&#39;, &#39;&#39;) , &#39;(&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone Number</label>
    <type>Text</type>
</CustomField>