unpackaged/main/default/objects/Account/fields/Account_Plan_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Group__c</fullName>
    <label>Account Plan Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nordics</fullName>
            </value>
            <value>
                <fullName>SMM</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Top 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>