unpackaged/main/default/objects/Account/fields/Account_Plan_Present__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Present__c</fullName>
    <formula>IF(Account_Plan_Score_CY__c &gt; 0, &quot;Account Plan&quot;, &quot;No Plan&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Plan Present</label>
    <type>Text</type>
</CustomField>