unpackaged/main/default/objects/Account/fields/Account_Plan_Score_LY__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Score_LY__c</fullName>
    <label>Account Plan Score 2020</label>
    <summarizedField>Merchant_Account_Plan__c.Total_Health__c</summarizedField>
    <summaryFilterItems>
        <field>Merchant_Account_Plan__c.Name</field>
        <operation>contains</operation>
        <value>2020</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchant_Account_Plan__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>