unpackaged/main/default/objects/Account/fields/Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship__c</fullName>
    <formula>IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Red&quot;, TODAY()- LastActivityDate &lt; 60), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Red&quot;, TEXT(LastActivityDate) =&quot;&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZAJ2&quot;, &quot;Alert&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Red&quot;,  TODAY()- LastActivityDate &gt; 60), IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZAJ2&quot;, &quot;Alert&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Amber&quot;, TODAY()- LastActivityDate &lt; 60), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Amber&quot;, TODAY()- LastActivityDate &gt; 60), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Amber&quot;, TEXT(LastActivityDate) =&quot;&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcl&quot;, &quot;Red&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Green&quot;, TODAY()- LastActivityDate &lt; 60), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcv&quot;, &quot;Green&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Green&quot;, TODAY()- LastActivityDate &gt; 60), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,19, 19),
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Green&quot;, TEXT(LastActivityDate) =&quot;&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01524000004lpcq&quot;, &quot;Amber&quot;,19, 19),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0151o000005ZuOI&quot;, &quot;No Status&quot;, 20, 20))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Relationship</label>
    <type>Text</type>
</CustomField>