unpackaged/main/default/objects/Account/fields/Account_Relationship_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Reason__c</fullName>
    <formula>IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Red&quot;, TODAY()- LastActivityDate &lt; 60), &quot;Quality of Relationship is Red&quot;,
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Red&quot;, TEXT(LastActivityDate) =&quot;&quot;), &quot;No Activity&quot;,
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Red&quot;, TODAY()- LastActivityDate &gt; 60), &quot;Quality of Relationship is Red and Activity &gt; 60 Days&quot;,
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Amber&quot;, TODAY()- LastActivityDate &lt; 60), &quot;Quality of Relationship is Amber&quot;,
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Amber&quot;, TODAY()- LastActivityDate &gt; 60), &quot;Quality of Relationship is Amber and Activity &gt; 60 Days&quot;,
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Amber&quot;, TEXT(LastActivityDate) =&quot;&quot;), &quot;Quality of Relationship is Amber and No Activity&quot;,
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Green&quot;, TODAY()- LastActivityDate &lt; 60), &quot;All Criteria Met&quot;, 
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Green&quot;, TODAY()- LastActivityDate &gt; 60), &quot;Activity &gt;60 Days&quot;,
IF(AND(TEXT(Quality_of_Relationship__c) = &quot;Green&quot;, TEXT(LastActivityDate) =&quot;&quot;), &quot;No Activity&quot;,
&quot;No Status&quot;)))))))))</formula>
    <label>Account Relationship Reason</label>
    <type>Text</type>
</CustomField>