unpackaged/main/default/objects/Account/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <inlineHelpText>IKA – SiS is greater than €2,000,000 per annum, in at least 3 countries with SiS in at least 3
NKA – SiS is greater than €1,000,000 per annum, substantial national presence
Managed – SiS is greater than €100,000 per annum
Maintained - All Others</inlineHelpText>
    <label>Account Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IKA</fullName>
            </value>
            <value>
                <fullName>NKA</fullName>
            </value>
            <value>
                <fullName>Maintained</fullName>
            </value>
            <value>
                <fullName>Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>