unpackaged/main/default/objects/Account/fields/AccountId_x18__c.field-meta.xml
<CustomField>
    <fullName>AccountId_x18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountIDx18</label>
    <type>Text</type>
</CustomField>