unpackaged/main/default/objects/Account/fields/Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Acquirer__c</fullName>
    <label>Acquirer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>