unpackaged/main/default/objects/Account/fields/Acquirer_Share__c.field-meta.xml
<CustomField>
    <fullName>Acquirer_Share__c</fullName>
    <label>Acquirer Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>