unpackaged/main/default/objects/Account/fields/Acquisition_Partner__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Partner__c</fullName>
    <label>Acquisition Partner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Owning_Country__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alpha Bank</fullName>
            </value>
            <value>
                <fullName>Altair</fullName>
            </value>
            <value>
                <fullName>BNL Positivity</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
            <value>
                <fullName>Gastropool</fullName>
            </value>
            <value>
                <fullName>Hogast</fullName>
            </value>
            <value>
                <fullName>Jumana</fullName>
            </value>
            <value>
                <fullName>Jumana FS</fullName>
            </value>
            <value>
                <fullName>Setefi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>