unpackaged/main/default/objects/Account/fields/Actions_4th_Quarter_Score_CY__c.field-meta.xml
<CustomField>
    <fullName>Actions_4th_Quarter_Score_CY__c</fullName>
    <label>Actions 4th Quarter Score 2021</label>
    <summarizedField>Merchant_Account_Plan__c.Actions_4th_Quarter_Health__c</summarizedField>
    <summaryFilterItems>
        <field>Merchant_Account_Plan__c.Name</field>
        <operation>contains</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Merchant_Account_Plan__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>