unpackaged/main/default/objects/Account/fields/Additional_Refund_Methods__c.field-meta.xml
<CustomField>
    <fullName>Additional_Refund_Methods__c</fullName>
    <label>Additional Refund Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refund_Methods</valueSetName>
    </valueSet>
</CustomField>