unpackaged/main/default/objects/Account/fields/Additional_Supplier_Owner__c.field-meta.xml
<CustomField>
    <fullName>Additional_Supplier_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Supplier Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Additional Supplier Owner)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>