unpackaged/main/default/objects/Account/fields/Adjusted_ATV_Change__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_ATV_Change__c</fullName>
    <formula>ATV_Change__c -  Owner.Adj_ATV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted ATV % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>