unpackaged/main/default/objects/Account/fields/Adjusted_Forms_Change__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Forms_Change__c</fullName>
    <formula>Forms_Change__c - Owner.Adj_Forms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Forms % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>