unpackaged/main/default/objects/Account/fields/Adjusted_SiS_Change__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_SiS_Change__c</fullName>
    <formula>SiS_Change__c -  Owner.Adj_SiS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted SiS % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>