unpackaged/main/default/objects/Account/fields/Adopted_Fintrax_Modern_Slavery_Req__c.field-meta.xml
<CustomField>
    <fullName>Adopted_Fintrax_Modern_Slavery_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adopted Fintrax Modern Slavery Req?</label>
    <type>Checkbox</type>
</CustomField>