unpackaged/main/default/objects/Account/fields/Agent_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fee__c</fullName>
    <label>Agent Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>