unpackaged/main/default/objects/Account/fields/Agent_Fee_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fee_Maximum__c</fullName>
    <label>Agent Fee Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>