unpackaged/main/default/objects/Account/fields/Airlines__c.field-meta.xml
<CustomField>
    <fullName>Airlines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Airlines</label>
    <type>Checkbox</type>
</CustomField>