unpackaged/main/default/objects/Account/fields/Alternative_Refund_Structure__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Refund_Structure__c</fullName>
    <label>Alternative Refund Structure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>