unpackaged/main/default/objects/Account/fields/Annual_Net_Refund__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Refund__c</fullName>
    <label>Annual Net Refund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>