unpackaged/main/default/objects/Account/fields/Annual_Vouchers_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Annual_Vouchers_Refunded__c</fullName>
    <label>Annual Vouchers Refunded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>