unpackaged/main/default/objects/Account/fields/Any_Rebranding__c.field-meta.xml
<CustomField>
    <fullName>Any_Rebranding__c</fullName>
    <formula>IF(OR(Forms_Rebranded__c = TRUE, In_Store_Collateral_Rebranded__c = TRUE, IT_Solutions_Rebranded__c = TRUE), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Any Rebranding?</label>
    <type>Checkbox</type>
</CustomField>