unpackaged/main/default/objects/Account/fields/Apr_Value__c.field-meta.xml
<CustomField>
    <fullName>Apr_Value__c</fullName>
    <label>Apr Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>