unpackaged/main/default/objects/Account/fields/Atlassian_Link__c.field-meta.xml
<CustomField>
    <fullName>Atlassian_Link__c</fullName>
    <label>Atlassian Link</label>
    <type>Url</type>
</CustomField>