unpackaged/main/default/objects/Account/fields/ATM__c.field-meta.xml
<CustomField>
    <fullName>ATM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATM</label>
    <type>Checkbox</type>
</CustomField>