unpackaged/main/default/objects/Account/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <formula>IF(Number_of_Attachments__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment</label>
    <type>Checkbox</type>
</CustomField>