unpackaged/main/default/objects/Account/fields/ATV_Change__c.field-meta.xml
<CustomField>
    <fullName>ATV_Change__c</fullName>
    <formula>IF(ATV_Last_Quarter_LY__c &gt; 0, ATV_Last_Quarter__c / ATV_Last_Quarter_LY__c - 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATV % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>