unpackaged/main/default/objects/Account/fields/ATV_Last_Quarter__c.field-meta.xml
<CustomField>
    <fullName>ATV_Last_Quarter__c</fullName>
    <formula>IF(SiS_Last_Quarter__c &gt; 0, SiS_Last_Quarter__c / Forms_Last_Quarter__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATV Last Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>