unpackaged/main/default/objects/Account/fields/Aug_Value__c.field-meta.xml
<CustomField>
    <fullName>Aug_Value__c</fullName>
    <label>Aug Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>