unpackaged/main/default/objects/Account/fields/Avg_Foreign_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_Foreign_Volume__c</fullName>
    <label>Avg Foreign Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>