unpackaged/main/default/objects/Account/fields/B_Count__c.field-meta.xml
<CustomField>
    <fullName>B_Count__c</fullName>
    <description>System field used for calculation on Focus_Points_Scoring_by_Country report.</description>
    <formula>IF(TEXT(Category__c) = &quot;B&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>