unpackaged/main/default/objects/Account/fields/Back_End_System__c.field-meta.xml
<CustomField>
    <fullName>Back_End_System__c</fullName>
    <label>Back End System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AX</fullName>
            </value>
            <value>
                <fullName>TRS</fullName>
            </value>
            <value>
                <fullName>DCC</fullName>
            </value>
            <value>
                <fullName>eTF</fullName>
            </value>
            <value>
                <fullName>TRS &amp; DCC</fullName>
            </value>
            <value>
                <fullName>AX &amp; TRS</fullName>
            </value>
            <value>
                <fullName>GBTF BO</fullName>
            </value>
            <value>
                <fullName>CSMS</fullName>
            </value>
            <value>
                <fullName>CSMSNET</fullName>
            </value>
            <value>
                <fullName>ENACTOR</fullName>
            </value>
            <value>
                <fullName>MMR</fullName>
            </value>
            <value>
                <fullName>TLG</fullName>
            </value>
            <value>
                <fullName>INTEGRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>