unpackaged/main/default/objects/Account/fields/Booking_Engine__c.field-meta.xml
<CustomField>
    <fullName>Booking_Engine__c</fullName>
    <label>Booking Engine</label>
    <length>100</length>
    <type>Text</type>
</CustomField>