unpackaged/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Field to capture Hoist Brand - Saurabh 02/02/2022</description>
    <inlineHelpText>Hoist - Brand</inlineHelpText>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>