unpackaged/main/default/objects/Account/fields/Brand_or_Retailer__c.field-meta.xml
<CustomField>
    <fullName>Brand_or_Retailer__c</fullName>
    <description>Is this Head Office a Single Brand or Retailer with Multiple Sub-Brands</description>
    <inlineHelpText>Is this Head Office a Single Brand or Retailer with Multiple Sub-Brands</inlineHelpText>
    <label>Brand or Retailer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>