unpackaged/main/default/objects/Account/fields/Budget_Spend__c.field-meta.xml
<CustomField>
    <fullName>Budget_Spend__c</fullName>
    <label>Budget Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>