unpackaged/main/default/objects/Account/fields/BW_TEMP_Is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>BW_TEMP_Is_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BW_TEMP_Is_Duplicate</label>
    <type>Checkbox</type>
</CustomField>