unpackaged/main/default/objects/Account/fields/BW_TEMP_Master_Account__c.field-meta.xml
<CustomField>
    <fullName>BW_TEMP_Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BW_TEMP_Master_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (BW_TEMP_Master_Account)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>