unpackaged/main/default/objects/Account/fields/BW_Updated__c.field-meta.xml
<CustomField>
    <fullName>BW_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BW_Updated</label>
    <type>Checkbox</type>
</CustomField>